<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_word"
            android:icon="@drawable/baseline_search"
            android:title="@string/slow" />
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/baseline_attach"
            android:title="@string/e_fiszki" />

        <item
            android:id="@+id/nav_compare"
            android:icon="@drawable/baseline_swap"
            android:title="@string/pisownia" />

        <item
            android:id="@+id/nav_gramma"
            android:icon="@drawable/baseline_menu"
            android:title="@string/gramatyka" />

    </group>
</menu>