<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:layout_gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/linearLayoutCompat">


        <TextView
            android:id="@+id/textComparedAng_PolHomeAng"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/hint_ang"
            android:textSize="25dp"
            android:textColor="@color/colorText" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextHomePol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pol"
            android:layout_marginTop="40dp"
            android:textSize="20dp"
            android:inputType="text"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonAng_PolHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/text_check" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>