<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".ui.gramma.PresentSimpleFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Present Simple"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold|italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_zastosowanie"
                android:textSize="25sp"
                android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_presentsimple_zastosowanie"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_twierdzenia"
                android:textSize="25sp"
                android:textStyle="bold|italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="\nosoba + czasownik"
                android:textColor="@color/colorTextHint"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="\n\tYou go to school every day."
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="\nHe \\ She \\ It + czasownik z S\\ES "
                android:textColor="@color/colorTextHint"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="\n\tShe goes to school evry day.\n"
                android:textSize="20sp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_pytania"
                android:textSize="25sp"
                android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="\nDO \\ DOES + osoba + \nczasownik (bez S)"
                android:textColor="@color/colorTextHint"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="\n\tDo you go to schoole every day?\n\tDoes she go to school every day?\n"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_przeczenia"
                android:textSize="25sp"
                android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="\nosoba + DON'T \\ DOESEN'T + czasownik (bez S)"
                android:textColor="@color/colorTextHint"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="\n\tI don't go school every day.\n\tShe doesn't go to school every day.\n"
                android:textSize="20sp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>